<resources>
    <string name="app_name">CTSLocation</string>
    <string name="app_description">Informations about GPS location</string>
    <string name="app_version">Versão: 1.0.0</string>
    <string name="app_author">Eros Vitor Bornatowski</string>
    <string name="app_author_contact">erosborna@gmail.com</string>

    <string name="menu_main_about">About</string>

    <string name="screen_main_lbl_coordinates">Coordinates</string>
    <string name="screen_main_fld_latitude">Latitude:</string>
    <string name="screen_main_fld_latitude_hint">latitude</string>
    <string name="screen_main_fld_longitude">Longitude:</string>
    <string name="screen_main_fld_longitude_hint">longitude</string>
    <string name="screen_main_lbl_data">Data</string>
    <string name="screen_main_fld_postalcode">Zip code:</string>
    <string name="screen_main_fld_postalcode_hint">Zip code</string>
    <string name="screen_main_fld_street">Street:</string>
    <string name="screen_main_fld_street_hint">Street</string>
    <string name="screen_main_fld_number">Number:</string>
    <string name="screen_main_fld_number_hint">Number</string>
    <string name="screen_main_fld_district">District:</string>
    <string name="screen_main_fld_district_hint">District</string>
    <string name="screen_main_fld_city">City:</string>
    <string name="screen_main_fld_city_hint">City</string>
    <string name="screen_main_fld_state">State:</string>
    <string name="screen_main_fld_state_hint">State</string>
    <string name="screen_main_fld_country">Country:</string>
    <string name="screen_main_fld_country_hint">Country</string>
    <string name="screen_main_btn_update_location">Update location</string>

    <string name="screen_about_title">About</string>
    <string name="screen_about_logo_description"></string>

</resources>